--- a/.env.template
+++ b/.env.template
@@ -5,6 +5,7 @@ MYSQL_PASSWORD=
 MYSQL_HOST=
 MYSQL_PORT=3306
 MYSQL_NAME=sakila
-REDIS_URL=
+REDIS_HOST=
+REDIS_PORT=
 REDIS_PASSWORD=
-REDIS_CACHE_KEY_PREFIX=
+REDIS_KEY_PREFIX=
